--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ androidExtensions {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
         applicationId "io.melton.foodsbycodechallenge"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -57,11 +57,11 @@ dependencies {
     //KTX
     implementation 'androidx.core:core-ktx:0.3'
 
-    //Kotlin and support libs (I'm using the version 27 support lib because androidx is hella broken right now)
+    //Kotlin and support libs (I'm using the version 27 support lib because androidx is hella broken succeeded now)
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:design:27.1.1'
 
     //Room
     implementation "android.arch.persistence.room:runtime:$room_version"
@@ -73,6 +73,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
